--- a/cv/index.html
+++ b/cv/index.html
@@ -1,100 +1,196 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>CV - Yuki Yanai</title>
-<!-- InstanceEndEditable -->
-<link href="../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>CV - Yuki Yanai</title>
+    <!-- InstanceEndEditable -->
+    <link href="../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="current" href="/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/research/">research</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/research/">research</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="current" href="/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/research/">research</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/teaching/">teaching</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/jp/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h2>Brief CV</h2>
-  
-  <p class="fltrt"><a href="docs/cv_yyanai.pdf" target="_blank">Full CV</a> (PDF) </p>
-  <br>
- 
- 
-  <h3>Current Position</h3>
-  <ul>
-    <li>Assistant Professor, School of Economics &amp; Management, <a href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a> (Apr 2018 - present)</li>  
-  </ul>
- 
-  <h3>Previous Positions</h3>
-  <ul>
-    <li>Assistant Professor, Graduate School of International Relations, International University of Japan (Sep 2016 - Mar 2018)</li>
-    <li>Assistant Professor, Graduate School of Law, Kobe University (July 2014 - Aug 2016)</li>
-    <li>Adjunct Lecturer, School of Political Science and Economics, Waseda University (Apr 2014 - Sep 2014)</li>
-    <li>Adjunct Researcher, Faculty of Political Science and Economics, Waseda University (Apr 2013 - June 2014)</li>
-    <li> Lecturer (adjunct), School of Political Science and Economics, Takushoku University (Apr 2012 - Sep 2014)</li>
-    <li>Research Associate, Faculty of Education and Integrated Arts and Sciences, Waseda University (Apr 2010 - Mar 2013)</li>
-  </ul>
-  
-  <h3>Education</h3>
-  <ul>
-    <li>Ph.D. in Political Science, Department of Political Science, University of California, Los Angeles (Mar 2017)</li>
-    <li>
-        <p>Dissertation: <i>Misperceived Inequality, Mismatched Attitudes, and Missing Support for Redistribution.</i></p>
-        <p>Committee: <a href="https://www.golden.polisci.ucla.edu/" target="_blank">Miriam A. Golden</a> (chair), <a href="http://thies.bol.ucla.edu/Home.html" target="_blank">Michael F. Thies</a>, <a href="http://luskin.ucla.edu/person/chris-tilly/" target="_blank">Christopher C. Tilly</a>.</p>
-    </li>
-    <li>C.Phil. in Political Science, Department of Political Science, University of California, Los Angeles (Dec 2009)</li>
-    <li>M.A. in Political Science, Department of Political Science, University of California, Los Angeles (Dec 2008)</li>
-    <li>B.A. in Political Science, School of Political Science and Economics, Waseda University (Mar 2005)</li>
-  </ul>
-  
-  <h3>Grants and Awards</h3>
-  <ul>
-    <li> Japan Society for the Promotion of Science, Grant-in-Aid for Scientific Research (KAKEN):
-        Nos. 22830099 (2010-2012), 25780102 (2013-2016), 16K17051 (2016-2019), 19K21682 (2019-2022), and 19H01447 (2019-2023).
-    </li>
-    <li>Walter Beach Award, Southern Political Science Association (2018)</li>
-    <li> Waseda University Grant for Special Research Projects: 2010A-841, 2011A-026, 2012A-025, and 2012B-062 (2010, 2011, 2012)</li>
-    <li>Prestage-Cook Award, Southern Political Science Association (2012)</li>
-    <li>George and Sakaye Aratani Fellowship, Paul I. and Hisako Terasaki Center for Japanese Studies, UCLA (2009)</li>
-    <li>Research Grant, Institute for Research on Labor and Employment, UCLA (2009)</li>
-    <li>Ishizaka Foundation Scholarship (2006-2008)</li>
-  </ul>
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
- <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+          <a class="white-red" href="/teaching/">teaching</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="/jp/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>Brief CV</h2>
+
+        <p class="fltrt">
+          <a href="docs/cv_yyanai.pdf" target="_blank">Full CV</a> (PDF)
+        </p>
+        <br />
+
+        <h3>Current Position</h3>
+        <ul>
+          <li>
+            Assistant Professor, School of Economics &amp; Management,
+            <a
+              href="https://www.kochi-tech.ac.jp/english/index.html"
+              target="_blank"
+              >Kochi University of Technology</a
+            >
+            (Apr 2018 - present)
+          </li>
+        </ul>
+
+        <h3>Previous Positions</h3>
+        <ul>
+          <li>
+            Assistant Professor, Graduate School of International Relations,
+            International University of Japan (Sep 2016 - Mar 2018)
+          </li>
+          <li>
+            Assistant Professor, Graduate School of Law, Kobe University (July
+            2014 - Aug 2016)
+          </li>
+          <li>
+            Adjunct Lecturer, School of Political Science and Economics, Waseda
+            University (Apr 2014 - Sep 2014)
+          </li>
+          <li>
+            Adjunct Researcher, Faculty of Political Science and Economics,
+            Waseda University (Apr 2013 - June 2014)
+          </li>
+          <li>
+            Lecturer (adjunct), School of Political Science and Economics,
+            Takushoku University (Apr 2012 - Sep 2014)
+          </li>
+          <li>
+            Research Associate, Faculty of Education and Integrated Arts and
+            Sciences, Waseda University (Apr 2010 - Mar 2013)
+          </li>
+        </ul>
+
+        <h3>Education</h3>
+        <ul>
+          <li>
+            Ph.D. in Political Science, Department of Political Science,
+            University of California, Los Angeles (Mar 2017)
+          </li>
+          <li>
+            <p>
+              Dissertation:
+              <i
+                >Misperceived Inequality, Mismatched Attitudes, and Missing
+                Support for Redistribution.</i
+              >
+            </p>
+            <p>
+              Committee:
+              <a href="https://www.golden.polisci.ucla.edu/" target="_blank"
+                >Miriam A. Golden</a
+              >
+              (chair),
+              <a href="http://thies.bol.ucla.edu/Home.html" target="_blank"
+                >Michael F. Thies</a
+              >,
+              <a
+                href="http://luskin.ucla.edu/person/chris-tilly/"
+                target="_blank"
+                >Christopher C. Tilly</a
+              >.
+            </p>
+          </li>
+          <li>
+            C.Phil. in Political Science, Department of Political Science,
+            University of California, Los Angeles (Dec 2009)
+          </li>
+          <li>
+            M.A. in Political Science, Department of Political Science,
+            University of California, Los Angeles (Dec 2008)
+          </li>
+          <li>
+            B.A. in Political Science, School of Political Science and
+            Economics, Waseda University (Mar 2005)
+          </li>
+        </ul>
+
+        <h3>Grants and Awards</h3>
+        <ul>
+          <li>
+            Japan Society for the Promotion of Science, Grant-in-Aid for
+            Scientific Research (KAKEN): Nos. 22830099 (2010-2012), 25780102
+            (2013-2016), 16K17051 (2016-2019), 19K21682 (2019-2022), and
+            19H01447 (2019-2023).
+          </li>
+          <li>
+            Walter Beach Award, Southern Political Science Association (2018)
+          </li>
+          <li>
+            Waseda University Grant for Special Research Projects: 2010A-841,
+            2011A-026, 2012A-025, and 2012B-062 (2010, 2011, 2012)
+          </li>
+          <li>
+            Prestage-Cook Award, Southern Political Science Association (2012)
+          </li>
+          <li>
+            George and Sakaye Aratani Fellowship, Paul I. and Hisako Terasaki
+            Center for Japanese Studies, UCLA (2009)
+          </li>
+          <li>
+            Research Grant, Institute for Research on Labor and Employment, UCLA
+            (2009)
+          </li>
+          <li>Ishizaka Foundation Scholarship (2006-2008)</li>
+        </ul>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html"
+                >School of Econmics &amp; Management</a
+              >,
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/index.html"
+                target="_blank"
+                >Kochi University of Technology</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
