--- a/jp/publications/abstracts/bicameralism-parliamentarism.html
+++ b/jp/publications/abstracts/bicameralism-parliamentarism.html
@@ -1,69 +1,101 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Thies &amp; Yanai (2014) - 要旨</title>
-<!-- InstanceEndEditable -->
-<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Thies &amp; Yanai (2014) - 要旨</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-      <h3>Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet</h3>
-  <p>
-  <a class="black" href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> and <a class="black" href="http://www.yukiyanai.com/" target="_blank">Yuki Yanai</a>
-  <br><br>
-  『選挙研究』30巻2号, pp.60-74. (2014)<br><br>
-  </p>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h3>
+          Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet
+        </h3>
+        <p>
+          <a class="black" href="http://www.thies.bol.ucla.edu/" target="_blank"
+            >Michael F. Thies</a
+          >
+          and
+          <a class="black" href="http://www.yukiyanai.com/" target="_blank"
+            >Yuki Yanai</a
+          >
+          <br /><br />
+          『選挙研究』30巻2号, pp.60-74. (2014)<br /><br />
+        </p>
 
-
-  <h4>要旨</h4>
-  <p>David Mayhew (1991) は、与野党が取引をするので、分割政府になっても政権運営が行き詰まることはないと主張した。しかし、議会制の諸国では、政府の存続が立法活動の効率性に依存するため、そのような取引の価値は高くなる。ある議会制の国が強い二院制（つまり、下院に反対する意志と権力の両者をもつ上院）を備えていると、政府は野党が多数を占める上院に政策運営を妨げられ、辞職を強いられるかもしれない。では、日本の「ねじれ国会」は、政権を立ち往生させてきたのだろうか。この疑問に答えるため、本稿は与党が参議院での過半数確保に頻繁に失敗していた1989年から2013年までの日本の国会についてのデータを分析し、円滑な政権運営のために参議院を支配する必要はないが、参議院を野党に支配されると政策実施に大きな困難が生じることを示す。野党に参議院を支配されたとき、与党の提出法案は減少し、法案の修正と否決が増加することが明らかにされる。</p>
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-  <!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <h4>要旨</h4>
+        <p>
+          David Mayhew (1991)
+          は、与野党が取引をするので、分割政府になっても政権運営が行き詰まることはないと主張した。しかし、議会制の諸国では、政府の存続が立法活動の効率性に依存するため、そのような取引の価値は高くなる。ある議会制の国が強い二院制（つまり、下院に反対する意志と権力の両者をもつ上院）を備えていると、政府は野党が多数を占める上院に政策運営を妨げられ、辞職を強いられるかもしれない。では、日本の「ねじれ国会」は、政権を立ち往生させてきたのだろうか。この疑問に答えるため、本稿は与党が参議院での過半数確保に頻繁に失敗していた1989年から2013年までの日本の国会についてのデータを分析し、円滑な政権運営のために参議院を支配する必要はないが、参議院を野党に支配されると政策実施に大きな困難が生じることを示す。野党に参議院を支配されたとき、与党の提出法案は減少し、法案の修正と否決が増加することが明らかにされる。
+        </p>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
