--- a/jp/publications/abstracts/elections-in-crises.html
+++ b/jp/publications/abstracts/elections-in-crises.html
@@ -1,74 +1,117 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Yanai (2014) - 要旨</title>
-<!-- InstanceEndEditable -->
-<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Yanai (2014) - 要旨</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-      <h3>How Do Economic Crises Affect Electoral Choices? Analysing Voting Behavior in the British General Elections of 2010</h3>
-  <p>
-  <a class="black" href="http://www.yukiyanai.com/" target="_blank">Yuki Yanai</a>
-  <br><br>
- Magara, Hideko (ed) 2014. <a class="booktitle" href="http://www.e-elgar.co.uk/bookentry_main.lasso?id=15547/" target="_blank">Economic Crises and Policy Regime: The Dynamics of Policy Innovation and Paradigmatic Change</a>: Cheltenham: Edward Elgar, pp.263-279.<br>
- <br></p>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h3>
+          How Do Economic Crises Affect Electoral Choices? Analysing Voting
+          Behavior in the British General Elections of 2010
+        </h3>
+        <p>
+          <a class="black" href="http://www.yukiyanai.com/" target="_blank"
+            >Yuki Yanai</a
+          >
+          <br /><br />
+          Magara, Hideko (ed) 2014.
+          <a
+            class="booktitle"
+            href="http://www.e-elgar.co.uk/bookentry_main.lasso?id=15547/"
+            target="_blank"
+            >Economic Crises and Policy Regime: The Dynamics of Policy
+            Innovation and Paradigmatic Change</a
+          >: Cheltenham: Edward Elgar, pp.263-279.<br />
+          <br />
+        </p>
 
-
-  <h4>要旨</h4>
-  <p>金融危機の下で実施された2010年の英国総選挙では、労働党が敗れ、保守党と自由民主党の連立政権が誕生した。本稿は、労働党が下野し、保守党も単独での過半数獲得に失敗するというこの結果を、経済投票論に依拠して分析する。具体的には、2010年総選挙の前後に行われた世論調査データ (British Election Studies 2010) を分析し、英国の有権者が投票先を選ぶ際、経済の4つの面が考慮されたことを示す。4つの面とはすなわち、（1）合意争点、（2）経済政策に対する立場、（3）資産の有無、（4）経済危機についての認識である。これらの4つの次元が投票先の決定に影響を及ぼすが、常に4つすべてが影響するわけではないことも明らかにされる。有権者が直面する選択肢が異なれば、影響力を持つ要因も異なる。</p>
-<p>理論的に予測される通り、選挙時に与党であった労働党に投票し易いのは、（1）景気が良いと判断し、（2）社会民主的な政策を好み、（3）持家ではなく借家に住んでおり、（4）経済危機の影響を受けていないと考えている有権者であることが示される。さらに、景気が悪いと判断した有権者は、野党の中でも保守党ではなく自由民主党を選ぶ確率が高い。同様に、経済危機の影響を受けたと考えている有権者は、自由民主党の代わりに保守党を選ぶ確率が高くなる。</p>
-<p>このように、合意争点（景気の善し悪し）だけでは説明できない投票先の選択が、合意争点以外の経済争点によって説明できることを示す。景気の悪化は労働党から自由民主党への票の移動を、経済危機は労働党から保守党への票の移動をそれぞれ促した。したがって、英国における2010年総選挙の結果は、景気悪化と経済危機の組み合わせによってもたらされたと考えられる。<br><br>
- ISBN: 978-1-782-54991-8<br>
- <a href="http://amazon.co.jp/dp/1782549919/" target="_blank">amazon.co.jp</a>で購入できます.
-  </p>
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <h4>要旨</h4>
+        <p>
+          金融危機の下で実施された2010年の英国総選挙では、労働党が敗れ、保守党と自由民主党の連立政権が誕生した。本稿は、労働党が下野し、保守党も単独での過半数獲得に失敗するというこの結果を、経済投票論に依拠して分析する。具体的には、2010年総選挙の前後に行われた世論調査データ
+          (British Election Studies 2010)
+          を分析し、英国の有権者が投票先を選ぶ際、経済の4つの面が考慮されたことを示す。4つの面とはすなわち、（1）合意争点、（2）経済政策に対する立場、（3）資産の有無、（4）経済危機についての認識である。これらの4つの次元が投票先の決定に影響を及ぼすが、常に4つすべてが影響するわけではないことも明らかにされる。有権者が直面する選択肢が異なれば、影響力を持つ要因も異なる。
+        </p>
+        <p>
+          理論的に予測される通り、選挙時に与党であった労働党に投票し易いのは、（1）景気が良いと判断し、（2）社会民主的な政策を好み、（3）持家ではなく借家に住んでおり、（4）経済危機の影響を受けていないと考えている有権者であることが示される。さらに、景気が悪いと判断した有権者は、野党の中でも保守党ではなく自由民主党を選ぶ確率が高い。同様に、経済危機の影響を受けたと考えている有権者は、自由民主党の代わりに保守党を選ぶ確率が高くなる。
+        </p>
+        <p>
+          このように、合意争点（景気の善し悪し）だけでは説明できない投票先の選択が、合意争点以外の経済争点によって説明できることを示す。景気の悪化は労働党から自由民主党への票の移動を、経済危機は労働党から保守党への票の移動をそれぞれ促した。したがって、英国における2010年総選挙の結果は、景気悪化と経済危機の組み合わせによってもたらされたと考えられる。<br /><br />
+          ISBN: 978-1-782-54991-8<br />
+          <a href="http://amazon.co.jp/dp/1782549919/" target="_blank"
+            >amazon.co.jp</a
+          >で購入できます.
+        </p>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
