--- a/jp/classes/econometrics2/contents/index.html
+++ b/jp/classes/econometrics2/contents/index.html
@@ -1,121 +1,187 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>計量経済学応用 - 矢内 勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>計量経済学応用 - 矢内 勇生</title>
+    <!-- InstanceEndEditable -->
+    <link
+      href="../../../../css/yy_style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="shortcut icon" href="../../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-    <h1>計量経済学応用</h1>
-    <p>2019年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
-    <p><a href="../">授業概要</a></p>
-    <br>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h1>計量経済学応用</h1>
+        <p>2019年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
+        <p><a href="../">授業概要</a></p>
+        <br />
 
-    <h3><a href="http://www.yuhikaku.co.jp/static/studia_ws/index.html#isbn_9784641150287" target="_blank">教科書『計量経済学の第一歩』のサポートページ</a></h3>
+        <h3>
+          <a
+            href="http://www.yuhikaku.co.jp/static/studia_ws/index.html#isbn_9784641150287"
+            target="_blank"
+            >教科書『計量経済学の第一歩』のサポートページ</a
+          >
+        </h3>
 
-    <h2>授業の内容</h2>
+        <h2>授業の内容</h2>
 
-    <h3>1. イントロダクション</h3>
-      <ul>
-      <li><a href="slides/applied-econometrics-slides-01.pdf">講義スライド</a><li>
-      <li><a href="../../stat2/contents/R/installing-R.html" target="_blank">R とRStudio のインストール</a></li>
-  	  <li><a href="../../stat2/contents/R/introduction-to-R.html" target="_blank">R入門</a></li>
-  	  <li>（<a href="../../stat2/contents/" target="_blank">統計学2のページ</a>を参照）</li>
-   	  <!-- <li><a href="docs/rm1_assignment01.pdf">課題1</a></li> -->
-      <!--<li>.Rprofileの例：<a href="docs/dot_Rprofile.txt">dot_Rprofile.txt</a>（中身をコピペするか、ファイル名を".Rprofile" に変更して使うこと)</li> -->
-      <!-- <li><a href="https://kobelaw.au1.qualtrics.com/SE/?SID=SV_2fWlJYK3LeizHBX" target="_blank">課題1</a>（締切：4月19日午後9時）</li> -->
-      <!-- <li><a href="slides/stat2-slides-lec01.pdf">講義スライド</a></li> -->
-    </ul>
+        <h3>1. イントロダクション</h3>
+        <ul>
+          <li>
+            <a href="slides/applied-econometrics-slides-01.pdf">講義スライド</a>
+          </li>
+          <li></li>
+          <li>
+            <a href="../../stat2/contents/R/installing-R.html" target="_blank"
+              >R とRStudio のインストール</a
+            >
+          </li>
+          <li>
+            <a
+              href="../../stat2/contents/R/introduction-to-R.html"
+              target="_blank"
+              >R入門</a
+            >
+          </li>
+          <li>
+            （<a href="../../stat2/contents/" target="_blank">統計学2のページ</a
+            >を参照）
+          </li>
+          <!-- <li><a href="docs/rm1_assignment01.pdf">課題1</a></li> -->
+          <!--<li>.Rprofileの例：<a href="docs/dot_Rprofile.txt">dot_Rprofile.txt</a>（中身をコピペするか、ファイル名を".Rprofile" に変更して使うこと)</li> -->
+          <!-- <li><a href="https://kobelaw.au1.qualtrics.com/SE/?SID=SV_2fWlJYK3LeizHBX" target="_blank">課題1</a>（締切：4月19日午後9時）</li> -->
+          <!-- <li><a href="slides/stat2-slides-lec01.pdf">講義スライド</a></li> -->
+        </ul>
 
-    <h3>2. 因果推論</h3>
-      <ul>
-        <li><a href="slides/applied-econometrics-slides-02.pdf">講義スライド</a><li>
-        <li><a href="R/review-statistics.html">Rによる統計分析の基礎</a></li>
-        <li><a href="R/econom2-assignment01.html">課題1</a>（<b>締切：2019年4月23日午前9時</b>）</li>
-      </ul>
+        <h3>2. 因果推論</h3>
+        <ul>
+          <li>
+            <a href="slides/applied-econometrics-slides-02.pdf">講義スライド</a>
+          </li>
+          <li></li>
+          <li><a href="R/review-statistics.html">Rによる統計分析の基礎</a></li>
+          <li>
+            <a href="R/econom2-assignment01.html">課題1</a
+            >（<b>締切：2019年4月23日午前9時</b>）
+          </li>
+        </ul>
 
-    <h3>3. Rによるデータの扱い</h3>
-     <ul>
-        <li>この回は講義スライドなし</li>
-        <li><a href="R/data-handling.html">Rによるデータの扱い</a></li>
-     </ul>
+        <h3>3. Rによるデータの扱い</h3>
+        <ul>
+          <li>この回は講義スライドなし</li>
+          <li><a href="R/data-handling.html">Rによるデータの扱い</a></li>
+        </ul>
 
-   <h3>4-5. 単回帰分析</h3>
-     <ul>
-       <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
-       <li><a href="R/linear-regression-1.html">単回帰分析 I</a></li>
-       <li><a href="R/linear-regression-simulation1.html">単回帰分析のシミュレーション</a></li>
-       <li><a href="R/econom2-assignment02.html">課題2</a>（<b>締切：2019年5月9日の授業開始時</b>）</li>
-     </ul>
+        <h3>4-5. 単回帰分析</h3>
+        <ul>
+          <li>
+            <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a>
+          </li>
+          <li><a href="R/linear-regression-1.html">単回帰分析 I</a></li>
+          <li>
+            <a href="R/linear-regression-simulation1.html"
+              >単回帰分析のシミュレーション</a
+            >
+          </li>
+          <li>
+            <a href="R/econom2-assignment02.html">課題2</a
+            >（<b>締切：2019年5月9日の授業開始時</b>）
+          </li>
+        </ul>
 
-  <h3>6-7. 重回帰分析</h3>
-     <ul>
-       <li> <a href="slides/applied-econometrics-slides-06.pdf">講義スライド</a></li>
-       <li><a href="R/omitted-variable-bias.html">欠落変数バイアスのシミュレーション</a></li>
-     </ul>
+        <h3>6-7. 重回帰分析</h3>
+        <ul>
+          <li>
+            <a href="slides/applied-econometrics-slides-06.pdf">講義スライド</a>
+          </li>
+          <li>
+            <a href="R/omitted-variable-bias.html"
+              >欠落変数バイアスのシミュレーション</a
+            >
+          </li>
+        </ul>
 
-  <h3>8. 回帰分析結果の提示法</h3>
-    <ul>
-      <li> <a href="slides/applied-econometrics-slides-08.pdf">講義スライド</a></li>
-      <li><a href="R/linear-regression-4.html">回帰分析の結果の提示</a></li>
-      <li><a href="R/econom2-assignment03.html">課題3</a>（<b>締切：2019年5月23日の授業開始時</b>）</li>
-    </ul>
+        <h3>8. 回帰分析結果の提示法</h3>
+        <ul>
+          <li>
+            <a href="slides/applied-econometrics-slides-08.pdf">講義スライド</a>
+          </li>
+          <li><a href="R/linear-regression-4.html">回帰分析の結果の提示</a></li>
+          <li>
+            <a href="R/econom2-assignment03.html">課題3</a
+            >（<b>締切：2019年5月23日の授業開始時</b>）
+          </li>
+        </ul>
 
-  <h3>9. 操作変数法 (1)</h3>
-    <ul>
-      <li> <a href="slides/applied-econometrics-slides-09.pdf">講義スライド</a></li>
-      <li><a href="R/IV-method.html">操作変数法</a></li>
-    </ul>
+        <h3>9. 操作変数法 (1)</h3>
+        <ul>
+          <li>
+            <a href="slides/applied-econometrics-slides-09.pdf">講義スライド</a>
+          </li>
+          <li><a href="R/IV-method.html">操作変数法</a></li>
+        </ul>
 
-  <h3>10. 操作変数法 (2)</h3>
-    <ul>
-      <li> <a href="slides/applied-econometrics-slides-10.pdf">講義スライド</a></li>
-      <li><a href="R/econom2-assignment04.html">課題4</a>（<b>締切：2019年6月6日の授業開始時</b>）</li>
-    </ul>
+        <h3>10. 操作変数法 (2)</h3>
+        <ul>
+          <li>
+            <a href="slides/applied-econometrics-slides-10.pdf">講義スライド</a>
+          </li>
+          <li>
+            <a href="R/econom2-assignment04.html">課題4</a
+            >（<b>締切：2019年6月6日の授業開始時</b>）
+          </li>
+        </ul>
 
-  <h3>11-12. マッチング</h3>
-    <ul>
-      <li> <a href="slides/applied-econometrics-slides-11.pdf">講義スライド</a></li>
-      <li><a href="R/matching.html">マッチング</a></li>
-    </ul>
+        <h3>11-12. マッチング</h3>
+        <ul>
+          <li>
+            <a href="slides/applied-econometrics-slides-11.pdf">講義スライド</a>
+          </li>
+          <li><a href="R/matching.html">マッチング</a></li>
+        </ul>
 
-  <h3>13. 交差項の利用と<i>F</i> 検定</h3>
-    <ul>
-      <!--<li> <a href="slides/applied-econometrics-slides-13.pdf">講義スライド</a></li>-->
-      <li><a href="R/regression-interaction.html">回帰分析における交差項の利用と複合仮説の検定</a></li>
-    </ul>
+        <h3>13. 交差項の利用と<i>F</i> 検定</h3>
+        <ul>
+          <!--<li> <a href="slides/applied-econometrics-slides-13.pdf">講義スライド</a></li>-->
+          <li>
+            <a href="R/regression-interaction.html"
+              >回帰分析における交差項の利用と複合仮説の検定</a
+            >
+          </li>
+        </ul>
 
-
- <!--
+        <!--
     <h3>4. 因果推論入門</h3>
      <ul>
       <li> <a href="slides/applied-econometrics-slides-04.pdf">講義スライド</a></li>
@@ -185,26 +251,45 @@
 
 -->
 
-
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
