--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -1,83 +1,120 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>計量経済学応用 - 矢内勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>計量経済学応用 - 矢内勇生</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h2>計量経済学応用</h2>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>計量経済学応用</h2>
 
-    <p>2020年度 第2クォータ　高知工科大学　経済・マネジメント学群</p>
+        <p>2020年度 第2クォータ　高知工科大学　経済・マネジメント学群</p>
 
-  <h4><a class="black" href="docs/syllabus-applied-econometrics_2020-2Q.pdf">シラバス</a></h4>
+        <h4>
+          <a class="black" href="docs/syllabus-applied-econometrics_2020-2Q.pdf"
+            >シラバス</a
+          >
+        </h4>
 
-     <br>
+        <br />
 
-  <h3>授業の目的と到達目標</h3>
-    <p>経済学（ならびにマネジメント、政治学などの社会科学）における理論・仮説を量的データを用いて検証する方法を習得する。今年度は、特に因果効果 (causal effects) を推定する方法について学ぶ。自らの研究上の疑問に答えるために因果効果に関する仮説を立て、その仮説を統計的因果推論の方法を用いて検証できるようになることを目指す。</p>
-    <br>
+        <h3>授業の目的と到達目標</h3>
+        <p>
+          経済学（ならびにマネジメント、政治学などの社会科学）における理論・仮説を量的データを用いて検証する方法を習得する。今年度は、特に因果効果
+          (causal effects)
+          を推定する方法について学ぶ。自らの研究上の疑問に答えるために因果効果に関する仮説を立て、その仮説を統計的因果推論の方法を用いて検証できるようになることを目指す。
+        </p>
+        <br />
 
-  <h3><a href="https://yukiyanai.github.io/econometrics2/", target="_blank">授業の内容</a></h3>
-    <br>
+        <h3>
+          <a href="https://yukiyanai.github.io/econometrics2/" , target="_blank"
+            >授業の内容</a
+          >
+        </h3>
+        <br />
 
+        <h4>教科書</h4>
 
-  <h4>教科書</h4>
+        <ul>
+          <li>
+            安井翔太. 2020.『<a
+              href="https://gihyo.jp/book/2020/978-4-297-11117-5"
+              target="_blank"
+              >効果検証入門：正しい比較のための因果推論/計量経済学の基礎</a
+            >』技術評論社.
+          </li>
+        </ul>
 
-  <ul>
-    <li>安井翔太. 2020.『<a href="https://gihyo.jp/book/2020/978-4-297-11117-5" target="_blank">効果検証入門：正しい比較のための因果推論/計量経済学の基礎</a>』技術評論社.</li>
-  </ul>
-
-
-
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
