--- a/jp/classes/index.html
+++ b/jp/classes/index.html
@@ -1,99 +1,166 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>矢内 勇生 - 授業</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>矢内 勇生 - 授業</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="current" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-      <h2>授業</h2>
+          <a class="current" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>授業</h2>
 
-  <h3>今学期（2020年度後期）の授業</h3>
-  <h4>高知工科大学</h4>
-  <ul>
-     <li><a href="econometrics1/">計量経済学</a></li>
-     <li><a href="info3">情報科学3</a></li>
-   </ul>
+        <h3>今学期（2020年度後期）の授業</h3>
+        <h4>高知工科大学</h4>
+        <ul>
+          <li><a href="econometrics1/">計量経済学</a></li>
+          <li><a href="info3">情報科学3</a></li>
+        </ul>
 
+        <h3>過去の授業</h3>
 
-  <h3>過去の授業</h3>
+        <h4>高知工科大学</h4>
+        <ul>
+          <li><a href="stat2/">統計学 2</a></li>
+          <li><a href="econometrics2/">計量経済学応用</a></li>
+        </ul>
 
-  <h4>高知工科大学</h4>
-  <ul>
-    <li><a href="stat2/">統計学 2</a></li>
-    <li><a href="econometrics2/">計量経済学応用</a></li>
-  </ul>
-  
-
-  <h4>他大学</h4>
-  <ul>
-    <li><a href="kobe-cp/">比較政治学 B</a> [2017年夏期集中, 2018年夏期集中, 神戸大学 法学部]</li>
-    <li>比較政治学 A [2017年夏期集中, 2018年夏期集中, 神戸大学 法学部]</li>
-    <li><a href="/teaching/pubadmin/">Public Administration</a> [2017年冬学期, 2018年冬学期, 国際大学国際関係学研究科]</li>
-    <li><a href="/teaching/methodology/">Research Methodology</a> [2017年春学期, 国際大学国際関係学研究科]</li>
-    <li><a href="/teaching/lgps/">Local Government and Public Services</a> [2017年春学期, 秋学期, 国際大学国際関係学研究科]</li>
-    <li><a href="rm1/">政治学方法論 I</a> [2014年度後期, 2016年度前期, 神戸大学 法学部 / 法学研究科] </li>
-    <li><a href="/teaching/rm1/">Research Methods in Political Science I</a> [2015年度後期, 神戸大学 法学部 / 法学研究科] </li>
-    <li><a href="rm2/">政治学方法論 II</a> [2015年度前期, 神戸大学 法学部 / 法学研究科] </li>
-    <li><a href="/teaching/rm2-2016/">Research Methods in Political Science II</a> [2016年度後期, 神戸大学 法学部 / 法学研究科] </li>
-    <li><a href="/teaching/rm3/">Research Methods in Political Science III</a> [2016年度前期, 神戸大学 法学部 / 法学研究科]</li>
-    <li><a href="pe1">政治経済学 I （政治経済学）</a> [2014年度後期, 2015年度後期, 2016年度後期, 神戸大学 法学部 / 法学研究科] </li>
-    <li><a href="pe2/">政治経済学 II</a> [2015年度前期, 神戸大学 法学部 / 法学研究科] </li>
-    <li><a href="pp1/">政治過程論 I</a> [2015年度前期, 甲南大学 法学部]</li>
-    <li>政治学英語文献研究（応用） [2014年度前期, 早稲田大学 政治経済学部]</li>
-    <li>現代デモクラシー論 A, B [2014年度前期, 拓殖大学 政経学部]</li>
-    <li>政治学原論 I, II [2013年度, 2014年度, 拓殖大学 政経学部]</li>
-    <li>計量政治学 [2012年度前・後期, 2013年度前・後期, 拓殖大学 政経学部]</li>
-    <li>統計入門 [2012年度前・後期, 2013年度前・後期, 拓殖大学 政経学部]</li>
-  </ul>
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <h4>他大学</h4>
+        <ul>
+          <li>
+            <a href="kobe-cp/">比較政治学 B</a> [2017年夏期集中, 2018年夏期集中,
+            神戸大学 法学部]
+          </li>
+          <li>
+            比較政治学 A [2017年夏期集中, 2018年夏期集中, 神戸大学 法学部]
+          </li>
+          <li>
+            <a href="/teaching/pubadmin/">Public Administration</a>
+            [2017年冬学期, 2018年冬学期, 国際大学国際関係学研究科]
+          </li>
+          <li>
+            <a href="/teaching/methodology/">Research Methodology</a>
+            [2017年春学期, 国際大学国際関係学研究科]
+          </li>
+          <li>
+            <a href="/teaching/lgps/">Local Government and Public Services</a>
+            [2017年春学期, 秋学期, 国際大学国際関係学研究科]
+          </li>
+          <li>
+            <a href="rm1/">政治学方法論 I</a> [2014年度後期, 2016年度前期,
+            神戸大学 法学部 / 法学研究科]
+          </li>
+          <li>
+            <a href="/teaching/rm1/">Research Methods in Political Science I</a>
+            [2015年度後期, 神戸大学 法学部 / 法学研究科]
+          </li>
+          <li>
+            <a href="rm2/">政治学方法論 II</a> [2015年度前期, 神戸大学 法学部 /
+            法学研究科]
+          </li>
+          <li>
+            <a href="/teaching/rm2-2016/"
+              >Research Methods in Political Science II</a
+            >
+            [2016年度後期, 神戸大学 法学部 / 法学研究科]
+          </li>
+          <li>
+            <a href="/teaching/rm3/"
+              >Research Methods in Political Science III</a
+            >
+            [2016年度前期, 神戸大学 法学部 / 法学研究科]
+          </li>
+          <li>
+            <a href="pe1">政治経済学 I （政治経済学）</a> [2014年度後期,
+            2015年度後期, 2016年度後期, 神戸大学 法学部 / 法学研究科]
+          </li>
+          <li>
+            <a href="pe2/">政治経済学 II</a> [2015年度前期, 神戸大学 法学部 /
+            法学研究科]
+          </li>
+          <li>
+            <a href="pp1/">政治過程論 I</a> [2015年度前期, 甲南大学 法学部]
+          </li>
+          <li>
+            政治学英語文献研究（応用） [2014年度前期, 早稲田大学 政治経済学部]
+          </li>
+          <li>現代デモクラシー論 A, B [2014年度前期, 拓殖大学 政経学部]</li>
+          <li>政治学原論 I, II [2013年度, 2014年度, 拓殖大学 政経学部]</li>
+          <li>
+            計量政治学 [2012年度前・後期, 2013年度前・後期, 拓殖大学 政経学部]
+          </li>
+          <li>
+            統計入門 [2012年度前・後期, 2013年度前・後期, 拓殖大学 政経学部]
+          </li>
+        </ul>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
