--- a/jp/classes/info3/index.html
+++ b/jp/classes/info3/index.html
@@ -1,93 +1,142 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>情報科学 3 - 矢内勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>情報科学 3 - 矢内勇生</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h2>情報科学 3</h2>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>情報科学 3</h2>
 
-    <p>2020年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
+        <p>2020年度 第3クォータ　高知工科大学　経済・マネジメント学群</p>
 
+        <!--<h4><a class="black" href="docs/syllabus-infoscience3_2019-3Q.pdf">シラバス（PDF; 要パスワード）</a></h4>-->
+        <h4>シラバスは KUTLMS に掲載</h4>
 
+        <br />
 
-  <!--<h4><a class="black" href="docs/syllabus-infoscience3_2019-3Q.pdf">シラバス（PDF; 要パスワード）</a></h4>-->
-  <h4>シラバスは KUTLMS に掲載 </h4>
+        <h3>Pythonのインストール</h3>
+        <ul>
+          <li>
+            <a href="python/install-python3.html" target="_blank"
+              >Windowsにインストールする方法</a
+            >
+          </li>
+        </ul>
 
-  <br>
+        <h3>授業に役立つリンク</h3>
+        <ul>
+          <li>
+            <a href="https://colab.research.google.com/" target="_blank"
+              >Google Colab</a
+            >
+          </li>
+          <li>
+            <a href="https://py3.codeskulptor.org/" target="_blank"
+              >CodeSkulptor3</a
+            >（ウェブ上でPython 3プログラムを実行できる）
+          </li>
+          <li>
+            Dive into Python 3（<a
+              href="http://www.diveintopython3.net/"
+              target="_blank"
+              >英語版</a
+            >;
+            <a href="http://diveintopython3-ja.rdy.jp/" target="_blank"
+              >日本語版</a
+            >）
+          </li>
+          <li>
+            <a href="https://scratch-howto.com/" target="_blank"
+              >スクラッチプログラミング入門</a
+            >
+          </li>
+        </ul>
 
-  <h3>Pythonのインストール</h3>
-  <ul>
-    <li><a href="python/install-python3.html" target="_blank">Windowsにインストールする方法</a></li>
-  </ul>
+        <br />
 
+        <h4>教科書</h4>
 
-  <h3>授業に役立つリンク</h3>
-  <ul>
-    <li><a href="https://colab.research.google.com/" target="_blank">Google Colab</a></li>
-    <li><a href="https://py3.codeskulptor.org/" target="_blank">CodeSkulptor3</a>（ウェブ上でPython 3プログラムを実行できる）</li>
-    <li>Dive into Python 3（<a href="http://www.diveintopython3.net/" target="_blank">英語版</a>; <a href="http://diveintopython3-ja.rdy.jp/" target="_blank">日本語版</a>）</li>
-    <li><a href="https://scratch-howto.com/" target="_blank">スクラッチプログラミング入門</a></li>
-  </ul>
+        <ul>
+          <li>
+            辻真吾. 2018.『<a
+              href="https://gihyo.jp/book/2018/978-4-7741-9643-5"
+              target="_blank"
+              >Pythonスタートブック [増補改訂版]</a
+            >』技術評論社.
+          </li>
+        </ul>
 
-  <br>
-
-
-  <h4>教科書</h4>
-
-  <ul>
-    <li>辻真吾. 2018.『<a href="https://gihyo.jp/book/2018/978-4-7741-9643-5" target="_blank">Pythonスタートブック [増補改訂版]</a>』技術評論社.</li>
-  </ul>
-
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
