--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -1,91 +1,130 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>統計学 2 - 矢内勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>統計学 2 - 矢内勇生</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h2>統計学 2</h2>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>統計学 2</h2>
 
-    <p>2020年度 <s>第1クォータ</s> 夏期集中 高知工科大学　経済・マネジメント学群</p>
-    <p>[新型コロナウィルスの影響により、開講を夏期に変更しました]</p>
+        <p>
+          2020年度 <s>第1クォータ</s> 夏期集中
+          高知工科大学　経済・マネジメント学群
+        </p>
+        <p>[新型コロナウィルスの影響により、開講を夏期に変更しました]</p>
 
-  <h4><a class="black" href="docs/syllabus-stat2_2020-summer.pdf">シラバス</a></h4>
+        <h4>
+          <a class="black" href="docs/syllabus-stat2_2020-summer.pdf"
+            >シラバス</a
+          >
+        </h4>
 
-     <br>
+        <br />
 
-  <h3>授業の目的と到達目標</h3>
-    <p>現代社会にあふれるデータを適切に理解・処理する能力（統計リテラシー）を身につけ、社会を批判的に観察できる目を養うことがこの授業の目的である。統計のウソにだまされないだけでなく、自らも意図せざるウソをつかず、統計を適切に利用・提示できるようになることを目標とする。</p>
-    <br>
+        <h3>授業の目的と到達目標</h3>
+        <p>
+          現代社会にあふれるデータを適切に理解・処理する能力（統計リテラシー）を身につけ、社会を批判的に観察できる目を養うことがこの授業の目的である。統計のウソにだまされないだけでなく、自らも意図せざるウソをつかず、統計を適切に利用・提示できるようになることを目標とする。
+        </p>
+        <br />
 
-  <h3><a href="contents/">授業の内容</a></h3>
-    <br>
+        <h3><a href="contents/">授業の内容</a></h3>
+        <br />
 
+        <h4>教科書</h4>
 
-  <h4>教科書</h4>
+        <ul>
+          <li>
+            浅野正彦, 矢内勇生. 2018.『<a
+              href="https://github.com/yukiyanai/quant-methods-R"
+              target="_blank"
+              >Rによる計量政治学</a
+            >』オーム社.
+          </li>
+        </ul>
 
-  <ul>
-    <li> 浅野正彦, 矢内勇生. 2018.『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』オーム社.</li>
-  </ul>
-  
-   <h4>副読本</h4>
+        <h4>副読本</h4>
 
-  <ul>
-    <li> 宋財泫, 矢内勇生. 2020.『<a href="http://www.jaysong.net/RBook/" target="_blank">私たちのR</a>』(web-book)</li>
-  </ul>
+        <ul>
+          <li>
+            宋財泫, 矢内勇生. 2020.『<a
+              href="http://www.jaysong.net/RBook/"
+              target="_blank"
+              >私たちのR</a
+            >』(web-book)
+          </li>
+        </ul>
 
-
-
-
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
