--- a/jp/quant-methods-stata/index.html
+++ b/jp/quant-methods-stata/index.html
@@ -1,153 +1,271 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Stataによる計量政治学</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Stataによる計量政治学</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-    <h1>『Stataによる計量政治学』</h1>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著, 2013年, オーム社, ISBN: 978-4-274-06910-9</h3>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h1>『Stataによる計量政治学』</h1>
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="http://www.asanoucla.com/"
+            target="_blank"
+            >浅野正彦</a
+          >
+          氏と共著, 2013年, オーム社, ISBN: 978-4-274-06910-9
+        </h3>
 
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;単行本・Kindle版は <a class="red" href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>で
-    <!-- No longer avilable, PDF版は<a class="red" href="http://estore.ohmsha.co.jp/titles/978427406910P" target="_blank">オーム社のウェブサイト</a>で -->
-    購入できます.</h4>
+        <h4>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;単行本・Kindle版は
+          <a
+            class="red"
+            href="http://amazon.co.jp/dp/4274069109/"
+            target="_blank"
+            >amazon.co.jp</a
+          >で
+          <!-- No longer avilable, PDF版は<a class="red" href="http://estore.ohmsha.co.jp/titles/978427406910P" target="_blank">オーム社のウェブサイト</a>で -->
+          購入できます.
+        </h4>
 
-    <p>
-      <img src="images/cover.jpg" width="40%" align="right" hspace=40 vspace=40 border=1>
-    </p>
+        <p>
+          <img
+            src="images/cover.jpg"
+            width="40%"
+            align="right"
+            hspace="40"
+            vspace="40"
+            border="1"
+          />
+        </p>
 
-    <ul width=400>
-      <li>データセット一括ダウンロード：<a href="data/asano_yanai_data.zip">asano_yanai_data.zip</a></li>
-      <li>分析用doファイル一括ダウンロード：<a href="Stata-do/asano_yanai_do-files.zip">asano_yanai_do-files.zip</a></li>
-      <li>誤植の訂正表（準備中）</li>
-    </ul>
+        <ul width="400">
+          <li>
+            データセット一括ダウンロード：<a href="data/asano_yanai_data.zip"
+              >asano_yanai_data.zip</a
+            >
+          </li>
+          <li>
+            分析用doファイル一括ダウンロード：<a
+              href="Stata-do/asano_yanai_do-files.zip"
+              >asano_yanai_do-files.zip</a
+            >
+          </li>
+          <li>誤植の訂正表（準備中）</li>
+        </ul>
 
+        <h2>目次</h2>
 
+        <h3>第1章　計量政治学とは？</h3>
 
-    <h2>目次</h2>
+        <h3>第2章　研究テーマの選び方</h3>
 
-    <h3>第1章　計量政治学とは？</h3>
+        <h3>第3章　理論と仮説</h3>
 
-    <h3>第2章　研究テーマの選び方</h3>
+        <h3>第4章　Stata の使い方</h3>
+        <ul>
+          <li>
+            Rの基本的な使い方：<a
+              href="/jp/classes/stat2/contents/"
+              target="_blank"
+              >統計学2のページ</a
+            >
+          </li>
+        </ul>
 
-    <h3>第3章　理論と仮説</h3>
+        <h3>第5章　記述統計</h3>
+        <ul>
+          <li>
+            Stata doファイル：<a href="Stata-do/hr96-09manage.do"
+              >hr96-09manage.do</a
+            >, <a href="Stata-do/ch08.do">ch05.do</a>
+          </li>
+          <li>
+            データ: <a href="data/hr96-09.xlsx">hr96-09.xlsx</a>,
+            <a href="data/hr96-09.csv">hr96-09.csv</a>
+          </li>
+          <li>
+            <a href="R/ch05withR.html" target="_blank"
+              >Rを使って分析を再現する</a
+            >
+          </li>
+        </ul>
 
-    <h3>第4章　Stata の使い方</h3>
-      <ul>
-        <li>Rの基本的な使い方：<a href="/jp/classes/stat2/contents/" target="_blank">統計学2のページ</a></li>
-      </ul>
+        <h3>第6章　統計的推定</h3>
 
+        <h3>第7章　統計的仮説検定</h3>
 
+        <h3>第8章　平均値の比較</h3>
+        <ul>
+          <li>Stata doファイル：<a href="Stata-do/ch08.do">ch08.do</a></li>
+          <li>
+            データ: <a href="data/coffee_unpaired.dta">coffee_unpaired.dta</a>,
+            <a href="data/coffee_paired.dta">coffee_paired.dta</a>,
+            <a href="data/coffee_paired_small.dta">coffee_paired_small.dta</a>,
+            <a href="data/coffee_paired_diff.dta">coffee_paired_diff.dta</a>,
+            <a href="data/hr96-09.dta">hr96-09.dta</a>
+          </li>
+          <li>
+            <a href="R/ch08withR.html" target="_blank"
+              >Rを使って分析を再現する</a
+            >（R用データ：<a href="data/hr96-09labeled.dat"
+              >hr96-09labeled.dat</a
+            >）
+          </li>
+        </ul>
 
-    <h3>第5章　記述統計</h3>
-      <ul>
-       <li>Stata doファイル：<a href="Stata-do/hr96-09manage.do">hr96-09manage.do</a>, <a href="Stata-do/ch08.do">ch05.do</a></li>
-       <li>データ: <a href="data/hr96-09.xlsx">hr96-09.xlsx</a>, <a href="data/hr96-09.csv">hr96-09.csv</a></li>
-       <li><a href="R/ch05withR.html" target="_blank">Rを使って分析を再現する</a></li>
-      </ul>
+        <h3>第9章　変数間の関連性</h3>
+        <ul>
+          <li>Stata doファイル：<a href="Stata-do/ch09.do">ch09.do</a></li>
+          <li>
+            データ：<a href="data/hr96-09.dta">hr96-09.dta</a>,
+            <a href="data/ch9_cabinet_support.dta">ch9_cabinet_support.dta</a>,
+            <a href="data/ch9_fisher.dta">ch9_fisher.dta</a>
+          </li>
+          <li>
+            <a href="R/ch09withR.html" target="_blank"
+              >Rを使って分析を再現する</a
+            >
+          </li>
+        </ul>
 
-    <h3>第6章　統計的推定</h3>
+        <h3>第10章　回帰分析の基礎</h3>
+        <ul>
+          <li>Stata doファイル：<a href="Stata-do/ch10.do">ch10.do</a></li>
+          <li>
+            データ：<a href="data/beer2010.dta">beer2010.dta</a>,
+            <a href="data/hr96-09.dta">hr96-09.dta</a>
+          </li>
+          <li>
+            <a href="R/ch10withR.html" target="_blank"
+              >Rを使って分析を再現する</a
+            >
+          </li>
+        </ul>
 
-    <h3>第7章　統計的仮説検定</h3>
+        <h3>第11章　回帰分析による統計的推定</h3>
+        <ul>
+          <li>Stata doファイル：<a href="Stata-do/ch11.do">ch11.do</a></li>
+          <li>
+            データ：<a href="data/beer2010.dta">beer2010.dta</a>,
+            <a href="data/hr96-09.dta">hr96-09.dta</a>
+          </li>
+          <li>
+            <a href="R/ch11withR.html" target="_blank"
+              >Rを使って分析を再現する</a
+            >
+          </li>
+        </ul>
 
-    <h3>第8章　平均値の比較</h3>
-      <ul>
-       <li>Stata doファイル：<a href="Stata-do/ch08.do">ch08.do</a></li>
-       <li>データ: <a href="data/coffee_unpaired.dta">coffee_unpaired.dta</a>, <a href="data/coffee_paired.dta">coffee_paired.dta</a>, <a href="data/coffee_paired_small.dta">coffee_paired_small.dta</a>, <a href="data/coffee_paired_diff.dta">coffee_paired_diff.dta</a>, <a href="data/hr96-09.dta">hr96-09.dta</a></li>
-       <li><a href="R/ch08withR.html" target="_blank">Rを使って分析を再現する</a>（R用データ：<a href="data/hr96-09labeled.dat">hr96-09labeled.dat</a>）</li>
-      </ul>
+        <h3>第12章　回帰分析の前提と妥当性の診断</h3>
+        <ul>
+          <li>Stata doファイル：<a href="Stata-do/ch12.do">ch12.do</a></li>
+          <li>データ：<a href="data/hr96-09.dta">hr96-09.dta</a></li>
+          <li>
+            <a href="R/ch12withR.html" target="_blank"
+              >Rを使って分析を再現する</a
+            >
+          </li>
+        </ul>
 
-    <h3>第9章　変数間の関連性</h3>
-      <ul>
-       <li>Stata doファイル：<a href="Stata-do/ch09.do">ch09.do</a></li>
-       <li>データ：<a href="data/hr96-09.dta">hr96-09.dta</a>, <a href="data/ch9_cabinet_support.dta">ch9_cabinet_support.dta</a>, <a href="data/ch9_fisher.dta">ch9_fisher.dta</a></li>
-       <li><a href="R/ch09withR.html" target="_blank">Rを使って分析を再現する</a></li>
-      </ul>
+        <h3>第13章　回帰分析の応用</h3>
+        <ul>
+          <li>Stata doファイル：<a href="Stata-do/ch13.do">ch13.do</a></li>
+          <li>
+            データ：<a href="data/hr96-09.dta">hr96-09.dta</a>,
+            <a href="data/height.dta">height.dta</a>
+          </li>
+          <li>
+            <a href="R/ch13withR.html" target="_blank"
+              >Rを使って分析を再現する</a
+            >
+          </li>
+        </ul>
 
-    <h3>第10章　回帰分析の基礎</h3>
-      <ul>
-       <li>Stata doファイル：<a href="Stata-do/ch10.do">ch10.do</a></li>
-       <li>データ：<a href="data/beer2010.dta">beer2010.dta</a>, <a href="data/hr96-09.dta">hr96-09.dta</a></li>
-       <li><a href="R/ch10withR.html" target="_blank">Rを使って分析を再現する</a></li>
-      </ul>
+        <h3>第14章　ロジスティック回帰分析</h3>
+        <ul>
+          <li>Stata doファイル：<a href="Stata-do/ch14.do">ch14.do</a></li>
+          <li>
+            データ：<a href="data/ml_wl.dta">ml_wl.dta</a>,
+            <a href="data/hr96-09.dta">hr96-09.dta</a>
+          </li>
+          <li>
+            <a href="R/ch14withR.html" target="_blank"
+              >Rを使って分析を再現する</a
+            >
+          </li>
+        </ul>
 
-    <h3>第11章　回帰分析による統計的推定</h3>
-      <ul>
-       <li>Stata doファイル：<a href="Stata-do/ch11.do">ch11.do</a></li>
-       <li>データ：<a href="data/beer2010.dta">beer2010.dta</a>, <a href="data/hr96-09.dta">hr96-09.dta</a></li>
-       <li><a href="R/ch11withR.html" target="_blank">Rを使って分析を再現する</a></li>
-      </ul>
-
-    <h3>第12章　回帰分析の前提と妥当性の診断</h3>
-      <ul>
-       <li>Stata doファイル：<a href="Stata-do/ch12.do">ch12.do</a></li>
-       <li>データ：<a href="data/hr96-09.dta">hr96-09.dta</a></li>
-       <li><a href="R/ch12withR.html" target="_blank">Rを使って分析を再現する</a></li>
-      </ul>
-
-    <h3>第13章　回帰分析の応用</h3>
-      <ul>
-       <li>Stata doファイル：<a href="Stata-do/ch13.do">ch13.do</a></li>
-       <li>データ：<a href="data/hr96-09.dta">hr96-09.dta</a>, <a href="data/height.dta">height.dta</a></li>
-       <li><a href="R/ch13withR.html" target="_blank">Rを使って分析を再現する</a></li>
-      </ul>
-
-    <h3>第14章　ロジスティック回帰分析</h3>
-      <ul>
-       <li>Stata doファイル：<a href="Stata-do/ch14.do">ch14.do</a></li>
-       <li>データ：<a href="data/ml_wl.dta">ml_wl.dta</a>, <a href="data/hr96-09.dta">hr96-09.dta</a></li>
-       <li><a href="R/ch14withR.html" target="_blank">Rを使って分析を再現する</a></li>
-      </ul>
-
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
