--- a/jp/textbooks/index.html
+++ b/jp/textbooks/index.html
@@ -1,99 +1,234 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>教科書</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>教科書</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="current" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="current" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h1>執筆した教科書</h1>
 
-    <h1>執筆した教科書</h1>
-    
-    <h2> 『<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">政治経済学：グローバル化時代の国家と市場</a>』</h2>
-    <img src="images/political_economy.jpg" width="20%" align="right" hspace=40 vspace=10 border=1>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.soc.hit-u.ac.jp/~takujit/" target="_blank">田中拓道</a> 氏, 近藤正基氏, 上川龍之進氏と共著</h3>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;2020年, <a href="http://www.yuhikaku.co.jp/" target="_blank">有斐閣</a></h4>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-641-15079-9</h4>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.yuhikaku.co.jp/books/detail/9784641150799" target="_blank">ここ</a> から購入できます</h3>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;電子版（固定レイアウト）もあります</h4>
-    <ul>
-      <li><a href="https://www.kinokuniya.co.jp/disp/CSfGoodsPage_001.jsp?CAT=08&GOODS_STK_NO=EK-0915564" target="_blank">紀伊國屋電子書籍ストア</a></li>
-      <li><a href="https://www.amazon.co.jp/dp/B08M5RTDLN/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank">amazon（kindleストア）</a></li>
-      <li><a href="https://coop-ebook.jp/asp/ShowSeriesDetail.do?seriesId=MBJS-386102" target="_blank">大学生協 (VarsityWave eBooks)</a></li>
-    </ul>
-    <br><br>
+        <h2>
+          『<a
+            href="http://www.yuhikaku.co.jp/books/detail/9784641150799"
+            target="_blank"
+            >政治経済学：グローバル化時代の国家と市場</a
+          >』
+        </h2>
+        <img
+          src="images/political_economy.jpg"
+          width="20%"
+          align="right"
+          hspace="40"
+          vspace="10"
+          border="1"
+        />
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="https://www.soc.hit-u.ac.jp/~takujit/"
+            target="_blank"
+            >田中拓道</a
+          >
+          氏, 近藤正基氏, 上川龍之進氏と共著
+        </h3>
+        <h4>
+          &nbsp;&nbsp;&nbsp;&nbsp;2020年,
+          <a href="http://www.yuhikaku.co.jp/" target="_blank">有斐閣</a>
+        </h4>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-641-15079-9</h4>
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="http://www.yuhikaku.co.jp/books/detail/9784641150799"
+            target="_blank"
+            >ここ</a
+          >
+          から購入できます
+        </h3>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;電子版（固定レイアウト）もあります</h4>
+        <ul>
+          <li>
+            <a
+              href="https://www.kinokuniya.co.jp/disp/CSfGoodsPage_001.jsp?CAT=08&GOODS_STK_NO=EK-0915564"
+              target="_blank"
+              >紀伊國屋電子書籍ストア</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.amazon.co.jp/dp/B08M5RTDLN/ref=tmm_kin_swatch_0?_encoding=UTF8&qid=&sr="
+              target="_blank"
+              >amazon（kindleストア）</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://coop-ebook.jp/asp/ShowSeriesDetail.do?seriesId=MBJS-386102"
+              target="_blank"
+              >大学生協 (VarsityWave eBooks)</a
+            >
+          </li>
+        </ul>
+        <br /><br />
 
-    <h2>『<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">Rによる計量政治学</a>』</h2>
-    <img src="images/quant-methods-R-cover.png" width="20%" align="right" hspace=40 vspace=10 border=1>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著</h3>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;2018年, <a href="https://www.ohmsha.co.jp/" target="_blank">オーム社</a></h4>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-274-22313-2</h4>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/yukiyanai/quant-methods-R" target="_blank">サポートページ</a></h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.ohmsha.co.jp/book/9784274223136/" target="_blank">ここ</a> から購入できます（電子書籍もあります）</h3>
-    <!--<h3>&nbsp;&nbsp;&nbsp;&nbsp;<a class="red" href="http://amazon.co.jp/dp/4274223132/" target="_blank">amazon.co.jp</a>で購入できます.</h3> -->
+        <h2>
+          『<a
+            href="https://github.com/yukiyanai/quant-methods-R"
+            target="_blank"
+            >Rによる計量政治学</a
+          >』
+        </h2>
+        <img
+          src="images/quant-methods-R-cover.png"
+          width="20%"
+          align="right"
+          hspace="40"
+          vspace="10"
+          border="1"
+        />
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="http://www.asanoucla.com/"
+            target="_blank"
+            >浅野正彦</a
+          >
+          氏と共著
+        </h3>
+        <h4>
+          &nbsp;&nbsp;&nbsp;&nbsp;2018年,
+          <a href="https://www.ohmsha.co.jp/" target="_blank">オーム社</a>
+        </h4>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-274-22313-2</h4>
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="https://github.com/yukiyanai/quant-methods-R"
+            target="_blank"
+            >サポートページ</a
+          >
+        </h3>
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="https://www.ohmsha.co.jp/book/9784274223136/"
+            target="_blank"
+            >ここ</a
+          >
+          から購入できます（電子書籍もあります）
+        </h3>
+        <!--<h3>&nbsp;&nbsp;&nbsp;&nbsp;<a class="red" href="http://amazon.co.jp/dp/4274223132/" target="_blank">amazon.co.jp</a>で購入できます.</h3> -->
 
-    <br><br><br><br><br>
+        <br /><br /><br /><br /><br />
 
-    <h2>『<a href="/jp/quant-methods-stata/">Stataによる計量政治学</a>』</h2>
-    <img src="images/stata-cover.jpg" width="20%" align="right" hspace=40 vspace=10 border=1>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.asanoucla.com/" target="_blank">浅野正彦</a> 氏と共著</h3>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;2013年, <a href="https://www.ohmsha.co.jp/" target="_blank">オーム社</a></h4>
-    <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-274-06910-9</h4>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/jp/quant-methods-stata/">サポートページ</a></h3>
-    <h3>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.ohmsha.co.jp/book/9784274069109/" target="_blank">ここ</a> から購入できます（電子書籍もあります）</h3>
-    <!--<h3>&nbsp;&nbsp;&nbsp;&nbsp;単行本・Kindle版は <a class="red" href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>で
+        <h2>
+          『<a href="/jp/quant-methods-stata/">Stataによる計量政治学</a>』
+        </h2>
+        <img
+          src="images/stata-cover.jpg"
+          width="20%"
+          align="right"
+          hspace="40"
+          vspace="10"
+          border="1"
+        />
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="http://www.asanoucla.com/"
+            target="_blank"
+            >浅野正彦</a
+          >
+          氏と共著
+        </h3>
+        <h4>
+          &nbsp;&nbsp;&nbsp;&nbsp;2013年,
+          <a href="https://www.ohmsha.co.jp/" target="_blank">オーム社</a>
+        </h4>
+        <h4>&nbsp;&nbsp;&nbsp;&nbsp;ISBN: 978-4-274-06910-9</h4>
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a href="/jp/quant-methods-stata/"
+            >サポートページ</a
+          >
+        </h3>
+        <h3>
+          &nbsp;&nbsp;&nbsp;&nbsp;<a
+            href="https://www.ohmsha.co.jp/book/9784274069109/"
+            target="_blank"
+            >ここ</a
+          >
+          から購入できます（電子書籍もあります）
+        </h3>
+        <!--<h3>&nbsp;&nbsp;&nbsp;&nbsp;単行本・Kindle版は <a class="red" href="http://amazon.co.jp/dp/4274069109/" target="_blank">amazon.co.jp</a>で
     購入できます.</h3>-->
 
-    <br><br><br><br><br>
+        <br /><br /><br /><br /><br />
 
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
