--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,111 +1,211 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Teaching - Yuki Yanai</title>
-<!-- InstanceEndEditable -->
-<link href="../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Teaching - Yuki Yanai</title>
+    <!-- InstanceEndEditable -->
+    <link href="../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/research/">research</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/research/">research</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/research/">research</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="current" href="/teaching/">teaching</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/jp/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h2>Courses</h2>
-  
-  <h3>Current (Fall 2020)</h3>
-  <ul>
-    <li><a href="/jp/classes/econometrics1/" target="_blank">Econometrics</a> (u; in Japanese)</li>
-    <li><a href="/jp/classes/info3/" target="_blank">Information Science III</a> (u; in Japanese)</li>
-  </ul>
-  
+          <a class="current" href="/teaching/">teaching</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="/jp/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>Courses</h2>
 
-  <h3>Past</h3>
-  <h4>Kochi University of Technology</h4>
-  <ul>
-    <li><a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in Japanse)</li>
-    <li><a href="/jp/classes/econometrics2/" target="_blank">Applied Econometrics</a> (u; in Japanese)</li>
-  </ul>
-  
-  
-  
-  <h4>Kobe University</h4>
-  <ul>
-    <li><a href="/jp/classes/kobe-cp/">Comparative Politics B</a> (u) Summer 2017, Summer 2018</li>
-    <li>Comparative Politics A (u) Summer 2017, Summer 2018</li>
-    <li><a href="/jp/classes/pe/" target="_blank">Basics of Political Economy</a> (u &amp; g) Fall 2016</li>
-    <li><a href="/jp/classes/pe1/" target="_blank">Political Economy I</a> (u &amp; g) Fall 2014, Fall 2015</li>
-    <li><a href="/jp/classes/pe2/" target="_blank">Political Economy II</a> (u &amp; g) Spring 2015</li>
-    <li><a href="rm1/" target="_blank">Research Methods in Political Science I</a> [taught in English]  (u &amp; g) Fall 2015</li>
-    <li><a href="/jp/classes/rm1/" target="_blank">Research Methods in Political Science I</a> [taught in Japanese] (u &amp; g) Fall 2014, Spring 2016</li>
-    <li><a href="rm2-2016/" target="_blank">Research Methods in Political Science II</a> [taught in English] (u &amp; g) Fall 2016</li>
-    <li><a href="/jp/classes/rm2/" target="_blank">Research Methods in Political Science II</a> [taught in Japanese] (u &amp; g) Spring 2015</li>
-    <li><a href="rm3/" target="_blank">Research Methods in Political Science III</a> [taught in English] (u &amp; g) Spring 2016</li>
-  </ul>
-  
-  <h4>International University of Japan</h4>
-  <ul>
-    <li><a href="pubadmin/" target="_blank">Public Administration</a> (g) Winter 2017, Winter 2018</li>
-    <li><a href="lgps/" target="_blank">Local Government and Public Services</a> (g) Spring 2017, Fall 2017</li>
-    <li><a href="methodology/" target="_blank">Research Methodology</a> (g) Spring 2017</li>
-    <li>Data Visualization and Statistics with Stata (g) Winter 2017, Winter 2018</li>
-  </ul>
-  
-  <h4>Takushoku University</h4>
-  <ul>
-    <li>Theories of Modern Democracy A, B (u) Spring 2014</li>
-    <li>Principles of Political Science I, II (u) 2013, 2014</li>
-    <li>Quantitative Methods in Political Science (u) Spring 2012, Fall 2012, Spring 2013, Fall 2013</li>
-    <li>Introduction to Statistics (u) Spring 2012, Fall 2012, Spring 2013, Fall 2013</li>
-  </ul>
-  
-    
-  <h4>Other Universities</h4>
-  <ul>  
-    <li><a href="/jp/classes/pp1/" target="_blank">Political Process I</a> (u), Konan University (Spring 2015)</li>
-    <li>English Readings in Political Science (u), Waseda University (Spring 2014)</li>
-  </ul>
-  
-  <div align="right">u=undergraduate; g=graduate&nbsp;&nbsp;&nbsp;</div>
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
- <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <h3>Current (Fall 2020)</h3>
+        <ul>
+          <li>
+            <a href="/jp/classes/econometrics1/" target="_blank"
+              >Econometrics</a
+            >
+            (u; in Japanese)
+          </li>
+          <li>
+            <a href="/jp/classes/info3/" target="_blank"
+              >Information Science III</a
+            >
+            (u; in Japanese)
+          </li>
+        </ul>
+
+        <h3>Past</h3>
+        <h4>Kochi University of Technology</h4>
+        <ul>
+          <li>
+            <a href="/jp/classes/stat2/" target="_blank">Statistics 2</a> (u; in
+            Japanse)
+          </li>
+          <li>
+            <a href="/jp/classes/econometrics2/" target="_blank"
+              >Applied Econometrics</a
+            >
+            (u; in Japanese)
+          </li>
+        </ul>
+
+        <h4>Kobe University</h4>
+        <ul>
+          <li>
+            <a href="/jp/classes/kobe-cp/">Comparative Politics B</a> (u) Summer
+            2017, Summer 2018
+          </li>
+          <li>Comparative Politics A (u) Summer 2017, Summer 2018</li>
+          <li>
+            <a href="/jp/classes/pe/" target="_blank"
+              >Basics of Political Economy</a
+            >
+            (u &amp; g) Fall 2016
+          </li>
+          <li>
+            <a href="/jp/classes/pe1/" target="_blank">Political Economy I</a>
+            (u &amp; g) Fall 2014, Fall 2015
+          </li>
+          <li>
+            <a href="/jp/classes/pe2/" target="_blank">Political Economy II</a>
+            (u &amp; g) Spring 2015
+          </li>
+          <li>
+            <a href="rm1/" target="_blank"
+              >Research Methods in Political Science I</a
+            >
+            [taught in English] (u &amp; g) Fall 2015
+          </li>
+          <li>
+            <a href="/jp/classes/rm1/" target="_blank"
+              >Research Methods in Political Science I</a
+            >
+            [taught in Japanese] (u &amp; g) Fall 2014, Spring 2016
+          </li>
+          <li>
+            <a href="rm2-2016/" target="_blank"
+              >Research Methods in Political Science II</a
+            >
+            [taught in English] (u &amp; g) Fall 2016
+          </li>
+          <li>
+            <a href="/jp/classes/rm2/" target="_blank"
+              >Research Methods in Political Science II</a
+            >
+            [taught in Japanese] (u &amp; g) Spring 2015
+          </li>
+          <li>
+            <a href="rm3/" target="_blank"
+              >Research Methods in Political Science III</a
+            >
+            [taught in English] (u &amp; g) Spring 2016
+          </li>
+        </ul>
+
+        <h4>International University of Japan</h4>
+        <ul>
+          <li>
+            <a href="pubadmin/" target="_blank">Public Administration</a> (g)
+            Winter 2017, Winter 2018
+          </li>
+          <li>
+            <a href="lgps/" target="_blank"
+              >Local Government and Public Services</a
+            >
+            (g) Spring 2017, Fall 2017
+          </li>
+          <li>
+            <a href="methodology/" target="_blank">Research Methodology</a> (g)
+            Spring 2017
+          </li>
+          <li>
+            Data Visualization and Statistics with Stata (g) Winter 2017, Winter
+            2018
+          </li>
+        </ul>
+
+        <h4>Takushoku University</h4>
+        <ul>
+          <li>Theories of Modern Democracy A, B (u) Spring 2014</li>
+          <li>Principles of Political Science I, II (u) 2013, 2014</li>
+          <li>
+            Quantitative Methods in Political Science (u) Spring 2012, Fall
+            2012, Spring 2013, Fall 2013
+          </li>
+          <li>
+            Introduction to Statistics (u) Spring 2012, Fall 2012, Spring 2013,
+            Fall 2013
+          </li>
+        </ul>
+
+        <h4>Other Universities</h4>
+        <ul>
+          <li>
+            <a href="/jp/classes/pp1/" target="_blank">Political Process I</a>
+            (u), Konan University (Spring 2015)
+          </li>
+          <li>
+            English Readings in Political Science (u), Waseda University (Spring
+            2014)
+          </li>
+        </ul>
+
+        <div align="right">u=undergraduate; g=graduate&nbsp;&nbsp;&nbsp;</div>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html"
+                >School of Econmics &amp; Management</a
+              >,
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/index.html"
+                target="_blank"
+                >Kochi University of Technology</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
