--- a/jp/publications/index.html
+++ b/jp/publications/index.html
@@ -42,15 +42,17 @@
         <h3>論文</h3>
         <ul>
           <li>
-            <a href="https://doi.org/10.1017/S1468109920000122" target="_blank">When Voters Favour the Social Investment Welfare State</a> (Marc
-            Brazzill, 眞柄秀子と共著).
+            <a href="https://doi.org/10.1017/S1468109920000122" target="_blank"
+              >When Voters Favour the Social Investment Welfare State</a
+            >
+            (Marc Brazzill, 眞柄秀子と共著).
             <a
               class="booktitle"
               href="https://www.cambridge.org/core/journals/japanese-journal-of-political-science"
               target="_blank"
               >Japanese Journal of Political Science</a
-            > 21 (4): 194-205
-            (2020) [<a
+            >
+            21 (4): 194-205 (2020) [<a
               class="abst"
               href="https://doi.org/10.7910/DVN/5NC2AV"
               target="_blank"
@@ -64,7 +66,7 @@
               >重村壮平</a
             >,
             <a href="http://www.jaysong.net/" target="_blank">宋財泫</a>
-            と共著）『選挙研究』36(2): 139-150 (2020, 近刊) [<a
+            と共著）『選挙研究』36(2): 139-150 (2020) [<a
               class="abst"
               href="https://github.com/yukiyanai/jjes_persuasion"
               target="_blank"
