--- a/research/index.html
+++ b/research/index.html
@@ -38,15 +38,17 @@
         <h3>Journal Articles</h3>
         <ul>
           <li>
-            <a href="https://doi.org/10.1017/S1468109920000122" target="_blank">When Voters Favour the Social Investment Welfare State</a> (with Marc
-            Brazzill and Hideko Magara).
+            <a href="https://doi.org/10.1017/S1468109920000122" target="_blank"
+              >When Voters Favour the Social Investment Welfare State</a
+            >
+            (with Marc Brazzill and Hideko Magara).
             <a
               class="booktitle"
               href="https://www.cambridge.org/core/journals/japanese-journal-of-political-science"
               target="_blank"
               >Japanese Journal of Political Science</a
-            > 21 (4): 194-205
-            (December 2020) [<a
+            >
+            21 (4): 194-205 (Dec. 2020) [<a
               class="abst"
               href="https://doi.org/10.7910/DVN/5NC2AV"
               target="_blank"
@@ -66,7 +68,7 @@
               target="_blank"
               >Japanese Journal of Electoral Studies</a
             >
-            36(2): 139-150 (2020, forthcoming) [<a
+            36(2): 139-150 (Dec. 2020) [<a
               class="abst"
               href="https://github.com/yukiyanai/jjes_persuasion"
               target="_blank"
